--- a/css/slider.css
+++ b/css/slider.css
@@ -1,3 +1,55 @@
+/*slideBox02 start*/
+.slideBox02 {
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+}
+.slideBox02 .hd {
+    text-align: center;
+    width: 100%;
+    overflow: hidden;
+    position: absolute;
+    bottom: 5px;
+    z-index: 1;
+}
+.slideBox02 .hd ul {
+    overflow: hidden;
+    zoom: 1;
+    display: inline-block;
+}
+.slideBox02 .hd ul li {
+    float: left;
+    margin-right: 12px;
+    width: 30px;
+    height: 6px;
+    line-height: 14px;
+    text-align: center;
+    background: #faf9f9;
+    cursor: pointer;
+}
+.slideBox02 .hd ul li.on {
+    background: #df0000;
+    color: rgb(255, 255, 255);
+}
+.slideBox02 .bd {
+    position: relative;
+    width: 100%;
+    z-index: 0;
+}
+.slideBox02 .bd li {
+    width: 100%;
+    display: block;
+    vertical-align: middle;
+}
+.slideBox02 .bd li a {
+    width: 100%;
+    display: block;
+}
+.slideBox02 .bd img {
+    width: 100%;
+    display: block;
+}
+/*slideBox02 end*/
 
 /*slideBox01 start*/
 
@@ -10,6 +62,8 @@
 .slideBox01 .bd li{ width:100%;display:block;vertical-align:middle; }
 .slideBox01 .bd li a{width: 100%;display: block;}
 .slideBox01 .bd img{ width:100%; display: block;  }
+
+
 /*slideBox01 end*/
 
 
@@ -85,7 +139,8 @@
 .textTab01{ text-align:left;border-bottom: 1px dashed #ddd;height: 142px;}
 .textTab01 .hd{ 
     height:35px; 
-    line-height:38px; background:#f4f4f4;  
+    line-height:38px; 
+    background:#f4f4f4;  
     border-bottom:2px solid #6eb92b;  
     position:relative; 
 }
