--- a/css/frame.css
+++ b/css/frame.css
@@ -48,6 +48,10 @@
     width: 1000px;
     margin: 0 auto;
 }
+.container1100 {
+    width: 1100px;
+    margin: 0 auto;
+}
 .container1200{
 	width:1200px;margin:0 auto;
 	padding-right: 15px;
