--- a/sass/web/button.scss
+++ b/sass/web/button.scss
@@ -1,3 +1,4 @@
+@import url(base.scss);
 $bg : button_group;　
 /*button_group01 start */
 .#{$bg}01{padding: 0 5%;}
@@ -21,3 +22,4 @@ $bg : button_group;　
 .#{$bg}01 .link-zone .link-wrapper .circle_c_link { background-color: #f2910f;}
 
 /*button_group01 end */
+
