--- a/css/web/base.css
+++ b/css/web/base.css
@@ -1,3 +1,10 @@
+body {
+  font-family: 'Microsoft YaHei',"Helvetica Neue", Helvetica, 'Hiragino Sans GB',  'WenQuanYi Micro Hei', Arial,sans-serif;
+  overflow-x: hidden;
+  font-size: 14px;
+  line-height: 22px;
+  color: #666; }
+
 /* color */
 .gray {
   color: #dbdbdb; }
