--- a/css/web/special.css
+++ b/css/web/special.css
@@ -1,101 +1,115 @@
+/* color */
+.gray {
+  color: #dbdbdb; }
+
+.abs, .absCenter {
+  position: absolute; }
+
+.absCenter {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto; }
+
 @keyframes shake {
   2% {
-    transform: translate(-1.36735px, -2.46829px) rotate(-0.72267deg); }
+    transform: translate(-2.11969px, -0.36232px) rotate(6.81776deg); }
   4% {
-    transform: translate(1.50135px, -1.03599px) rotate(-6.23683deg); }
+    transform: translate(-0.48066px, 1.86118px) rotate(8.63989deg); }
   6% {
-    transform: translate(-0.15974px, 0.81717px) rotate(-7.15438deg); }
+    transform: translate(-2.30293px, -1.76544px) rotate(5.34504deg); }
   8% {
-    transform: translate(-1.55596px, 0.52506px) rotate(3.16781deg); }
+    transform: translate(-0.57063px, -2.18064px) rotate(-9.14038deg); }
   10% {
-    transform: translate(1.92443px, 1.65855px) rotate(6.5389deg); }
+    transform: translate(0.15011px, 2.02877px) rotate(-6.36892deg); }
   12% {
-    transform: translate(1.58241px, 0.028px) rotate(-9.72622deg); }
+    transform: translate(0.07384px, 0.77011px) rotate(-3.70291deg); }
   14% {
-    transform: translate(0.23857px, 0.24277px) rotate(-9.76451deg); }
+    transform: translate(-0.17336px, -1.65131px) rotate(8.53537deg); }
   16% {
-    transform: translate(-0.71355px, -0.70421px) rotate(-8.68802deg); }
+    transform: translate(-1.53901px, -1.17056px) rotate(8.54663deg); }
   18% {
-    transform: translate(-1.36047px, -1.36308px) rotate(-0.96843deg); }
+    transform: translate(2.19669px, -0.54024px) rotate(-0.84895deg); }
   20% {
-    transform: translate(-1.13096px, -1.88951px) rotate(2.1771deg); }
+    transform: translate(-1.16042px, -1.75388px) rotate(8.56056deg); }
   22% {
-    transform: translate(1.85592px, 2.0935px) rotate(2.8325deg); }
+    transform: translate(-2.06599px, 1.24298px) rotate(-2.18089deg); }
   24% {
-    transform: translate(-1.77055px, 0.79512px) rotate(-5.53304deg); }
+    transform: translate(-2.32077px, 1.48287px) rotate(7.72354deg); }
   26% {
-    transform: translate(-2.14188px, 1.62485px) rotate(7.95689deg); }
+    transform: translate(1.69626px, 1.59281px) rotate(5.24443deg); }
   28% {
-    transform: translate(-0.04995px, -0.43358px) rotate(7.27816deg); }
+    transform: translate(-1.8874px, -1.19432px) rotate(-5.87701deg); }
   30% {
-    transform: translate(-1.34268px, -0.71453px) rotate(-0.99086deg); }
+    transform: translate(-1.75201px, -2.09635px) rotate(6.17439deg); }
   32% {
-    transform: translate(-0.37083px, -1.07777px) rotate(3.95248deg); }
+    transform: translate(0.34577px, -2.10117px) rotate(-1.92453deg); }
   34% {
-    transform: translate(-2.39604px, -1.27624px) rotate(-6.85406deg); }
+    transform: translate(2.06494px, -2.07204px) rotate(-5.0367deg); }
   36% {
-    transform: translate(0.21818px, -1.40017px) rotate(-5.29801deg); }
+    transform: translate(2.49209px, 0.44142px) rotate(2.88128deg); }
   38% {
-    transform: translate(-0.057px, 1.86636px) rotate(2.26327deg); }
+    transform: translate(0.06634px, -0.14736px) rotate(5.06015deg); }
   40% {
-    transform: translate(0.15901px, 2.04033px) rotate(-6.00148deg); }
+    transform: translate(2.01923px, 2.38732px) rotate(8.46922deg); }
   42% {
-    transform: translate(2.36356px, 2.28968px) rotate(-7.02998deg); }
+    transform: translate(2.08138px, 1.70124px) rotate(-7.36816deg); }
   44% {
-    transform: translate(-2.16193px, 0.14357px) rotate(-9.88595deg); }
+    transform: translate(-1.78261px, 1.76122px) rotate(-4.50962deg); }
   46% {
-    transform: translate(-1.20587px, -2.17301px) rotate(9.59675deg); }
+    transform: translate(-0.02048px, 2.09842px) rotate(-4.63132deg); }
   48% {
-    transform: translate(-0.45651px, 0.08958px) rotate(-4.13436deg); }
+    transform: translate(1.69179px, 2.37521px) rotate(-1.87135deg); }
   50% {
-    transform: translate(-1.44663px, 0.02062px) rotate(4.64077deg); }
+    transform: translate(2.06849px, 0.40773px) rotate(-5.63826deg); }
   52% {
-    transform: translate(-1.8463px, 0.1419px) rotate(-7.097deg); }
+    transform: translate(0.42571px, -0.04328px) rotate(2.09517deg); }
   54% {
-    transform: translate(-2.43634px, -0.99065px) rotate(8.24707deg); }
+    transform: translate(0.87126px, 1.15479px) rotate(8.89693deg); }
   56% {
-    transform: translate(1.54951px, -0.0678px) rotate(-6.76025deg); }
+    transform: translate(-0.45038px, -1.90857px) rotate(-6.54604deg); }
   58% {
-    transform: translate(2.42004px, 1.96291px) rotate(9.95215deg); }
+    transform: translate(1.24017px, -1.98371px) rotate(-1.76385deg); }
   60% {
-    transform: translate(1.44825px, 1.46496px) rotate(6.93061deg); }
+    transform: translate(-2.09296px, 2.03986px) rotate(-4.12536deg); }
   62% {
-    transform: translate(1.59613px, 1.36995px) rotate(-5.93932deg); }
+    transform: translate(0.02665px, 2.10984px) rotate(3.85628deg); }
   64% {
-    transform: translate(-1.10647px, 2.27054px) rotate(9.38905deg); }
+    transform: translate(1.42005px, 0.02362px) rotate(7.83778deg); }
   66% {
-    transform: translate(-0.85898px, 0.21622px) rotate(-4.80163deg); }
+    transform: translate(-1.29317px, 2.24512px) rotate(2.65831deg); }
   68% {
-    transform: translate(-2.19828px, -0.37538px) rotate(-7.56043deg); }
+    transform: translate(-2.364px, 0.55215px) rotate(-2.15024deg); }
   70% {
-    transform: translate(0.75868px, 1.86662px) rotate(-2.72081deg); }
+    transform: translate(-2.42922px, 0.13012px) rotate(2.39963deg); }
   72% {
-    transform: translate(0.5115px, -0.38429px) rotate(-7.17681deg); }
+    transform: translate(2.0414px, 1.91516px) rotate(-2.76612deg); }
   74% {
-    transform: translate(2.35891px, -0.68847px) rotate(-4.33378deg); }
+    transform: translate(-0.63791px, -1.94471px) rotate(-3.13274deg); }
   76% {
-    transform: translate(-0.20383px, 0.9269px) rotate(2.05732deg); }
+    transform: translate(2.13447px, 0.64255px) rotate(1.1468deg); }
   78% {
-    transform: translate(-1.51635px, -0.94034px) rotate(-6.26919deg); }
+    transform: translate(0.49344px, 2.4204px) rotate(9.40705deg); }
   80% {
-    transform: translate(1.04837px, 0.70536px) rotate(-9.1106deg); }
+    transform: translate(1.26401px, 0.66538px) rotate(5.62754deg); }
   82% {
-    transform: translate(-0.30536px, 1.29731px) rotate(4.85697deg); }
+    transform: translate(1.47633px, 2.32111px) rotate(-6.79348deg); }
   84% {
-    transform: translate(0.28613px, -1.73808px) rotate(-7.19081deg); }
+    transform: translate(2.26739px, -1.49248px) rotate(5.42875deg); }
   86% {
-    transform: translate(0.72761px, 2.18718px) rotate(2.81344deg); }
+    transform: translate(-1.29877px, -0.57629px) rotate(-3.60175deg); }
   88% {
-    transform: translate(0.13597px, -1.50006px) rotate(2.7432deg); }
+    transform: translate(-1.79015px, -0.1365px) rotate(7.04436deg); }
   90% {
-    transform: translate(-0.04746px, -1.49721px) rotate(-8.54413deg); }
+    transform: translate(1.07863px, 0.73433px) rotate(-2.2059deg); }
   92% {
-    transform: translate(-0.74958px, -0.3572px) rotate(8.95145deg); }
+    transform: translate(0.60886px, 0.79259px) rotate(9.55542deg); }
   94% {
-    transform: translate(-0.98605px, 1.77755px) rotate(-2.51326deg); }
+    transform: translate(-2.25517px, -2.30861px) rotate(6.33858deg); }
   96% {
-    transform: translate(1.30639px, 0.56675px) rotate(-6.04871deg); }
+    transform: translate(1.50739px, -1.36537px) rotate(3.85467deg); }
   98% {
-    transform: translate(2.39962px, 1.58537px) rotate(6.21254deg); }
+    transform: translate(0.47387px, 0.10022px) rotate(-2.55609deg); }
   0%, 100% {
     transform: translate(0, 0) rotate(0); } }
