--- a/sass/web/button.scss
+++ b/sass/web/button.scss
@@ -1,11 +1,11 @@
-@import url(base.scss);
-$bg : button_group;　
+@import "base";
+$bg : button_group;
+　
 /*button_group01 start */
 .#{$bg}01{padding: 0 5%;}
 .#{$bg}01 .link-zone { padding-right: 5px; padding-left: 5px; }
-.#{$bg}01 .link-wrapper { display: block;  text-decoration: none; }
+.#{$bg}01 .link-wrapper { display: block;text-decoration: none; }
 .#{$bg}01 .link-wrapper .LinkText {
-
     text-align: center;
     position: absolute;
     top: 50%;
@@ -18,8 +18,22 @@ $bg : button_group;　
     -ms-transform: translateY(-50%);
     -o-transform: translateY(-50%);
     transform: translateY(-50%);
+    /* opera mini ie9以下不支持*/
  }
 .#{$bg}01 .link-zone .link-wrapper .circle_c_link { background-color: #f2910f;}
-
 /*button_group01 end */
+
+$tagArray :(green:#6eb92b,blue:#1978CF,red:#ec5369,black:#171011);
+@each $cName,$cValue in $tagArray{
+    .tag-#{$cName}{
+        border:1px solid $cValue;
+        border-radius: 10px;
+        padding:0px 10px;
+        display: inline-block;
+    }
+}
+
+
+
+
 
