--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,11 @@
+.m_inner {
+    padding: 0px 15px 7px 15px;
+    background-color: #fff;
+    height: 100%;
+    position: relative;
+}
+            
+
 .brandName{
     padding: 30px 0;
     font-size: 20px;
@@ -13,7 +21,7 @@
 
 /*定制layer.js插件的skin即特定的样式*/
 .demo-class .layui-layer-content{
-		
+        
 }
 
 .templateHCJ #html,.templateHCJ #css,.templateHCJ #js{
@@ -26,7 +34,7 @@
 .templateHCJ{height: 100%;}
 
 .templateHCJ .title{
-	background: #ddd;
+    background: #ddd;
     color: black;
     padding: 6px 10px;
     font-size: 17px;
@@ -46,7 +54,7 @@
 }
 
 .templateHCJ #html .content{
-	max-height: 93%;
+    max-height: 93%;
 }
 
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
