--- a/css/special.css
+++ b/css/special.css
@@ -53,3 +53,38 @@
 }
 /*frosted-glass 毛玻璃 end*/
 
+/*shadow01 start*/ 
+.shadow01:before {
+    z-index: -2;
+    position: absolute;
+    background: transparent;
+    width: 50%;
+    height: 50%;
+    content: '';
+    left: 20px;
+    bottom: 8px;
+    -webkit-transform: skew(-12deg) rotate(-4deg);
+    -moz-transform: skew(-12deg) rotate(-4deg);
+    -o-transform: skew(-12deg) rotate(-4deg);
+    -ms-transform: skew(-12deg) rotate(-4deg);
+    -o-box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
+}
+.shadow01:after {
+    z-index: -1;
+    position: absolute;
+    background: transparent;
+    width: 50%;
+    height: 50%;
+    content: '';
+    right: 20px;
+    bottom: 8px;
+    -webkit-transform: skew(12deg) rotate(4deg);
+    -moz-transform: skew(12deg) rotate(4deg);
+    -o-transform: skew(12deg) rotate(4deg);
+    -ms-transform: skew(12deg) rotate(4deg);
+    -o-box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6);
+}
+/*shadow01 end*/
+
