--- a/css/web/base.css
+++ b/css/web/base.css
@@ -63,11 +63,27 @@ input {
   width: 100%;
   height: 100%; }
 
+.mar-center {
+  margin: 0 auto; }
+
+.align-center {
+  text-align: center; }
+
+.hide {
+  display: none; }
+
+.view-hide {
+  visibility: hidden; }
+
 .float-r {
   float: right; }
 
 .float-l {
   float: left; }
+
+.phase {
+  text-indent: 2rem;
+  line-height: 1.7; }
 
 /*color*/
 .white {
@@ -143,6 +159,9 @@ input {
 
 .padding-l-64 {
   padding-left: 64px; }
+
+.padding-l-77 {
+  padding-left: 77px; }
 
 .marin-t-7 {
   margin-top: 7px; }
