--- a/sass/web/input.scss
+++ b/sass/web/input.scss
@@ -1,64 +1,299 @@
-$is : 'input-set';
-$ib : 'inputBox';
-$text_width : 63;
-/* input-set03 start */
-.#{$is}03 .text {
-    width: #{$text_width}px;
-    float: left;
-    text-align: right;
-}
-.#{$is}03 .text,
-.#{$is}03 input {
-    height: 27px;
-    line-height: 27px;
-    display: block;
-    font-size: 14px;
-}
- 
-.#{$is}03 {
-    .#{$ib}{
-        margin-left: #{$text_width+15}px;
-        position: relative;
-    }
-}
- 
+@import "variable";
 
-.#{$is}03 .inputBox {
+$text_width : 63;
+@mixin input_set($num){
+    $is : 'input-set';
+    $ib : 'inputBox';
+ 
+    .#{$is}0#{$num}{
+        .text,input{
+            height: 27px;
+            line-height: 27px;
+            display: block;
+            font-size: 14px;
+        }
+        .text{
+            width: #{$text_width}px;
+            float: left;
+            text-align: right;
+        }
+        .#{$ib}{
+            margin-left: #{$text_width+15}px;
+            position: relative;
+            .verification_code{
+                height: 27px;
+                img{height: 100%;margin:0 15px;}
+            }
+            .tips{
+                float: left;
+                color: #b5b5b5;
+                line-height: 29px;
+                margin-left: 5px;
+            }
+            .small{
+                width: 33%;
+            }
+            .big{
+                width: 60%;
+            }
+            &.textarea .tips{
+                position: absolute;
+                left: 62%;
+                bottom: 0;   
+            }
+            
+        }
+        input,textarea{
+            border: 1px solid #cfcfcf;
+            width: 100%;
+            float: left;
+            padding: 0 5px;
+        }
+        textarea{
+            padding:{
+                top: 5px ;
+                bottom: 5px;
+            }
+            min-height: 110px; 
+        }
+         
+    } 
     
 }
-.#{$is}03 .inputBox .verification_code{height: 27px;}
-.#{$is}03 .inputBox .verification_code img{height: 100%;margin:0 15px;}
-.#{$is}03 .inputBox .tips{
+
+/* input-set04 start */
+.m-form-line{
+    .input-set05{
+        float: left;
+        position: relative;
+        min-height: 1px;
+        padding: 12px 0px;
+        
+    }
+    &.buttonRow{
+                padding-left:#{$text_width+16}px;
+    }
+}
+@include input_set(5);  
+
+.m-form-line .m-btn {
+    border-radius: 6px;
+}
+.m-form-line .m-btn {
+    width: 99px;
+    font-size: 13px;
+    font-weight: 700;
+    border: none;
+    color: rgb(255, 255, 255);
+
+    text-align: center;
+    padding: 7px 0px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+/* input-set04 end */
+
+/*input-set04 start*/
+.input-set04 {
+    width: 328px;
+    height: 38px;
+    border:1px solid #e0e0e0;
+}
+.input-set04 input {
+    display: inline-block;
     float: left;
-    color: #b5b5b5;
-    line-height: 29px;
-    margin-left: 5px;
+    height: 100%;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 38px;
 }
-.#{$is}03 .inputBox.textarea .tips{
-    position: absolute;
-    left: 62%;
-    bottom: 0;   
+.input-set04 input.input { /* Firefox */ /* Safari */
+    box-sizing: border-box;
+    
+    width: 82%;
+    padding-left: 2%;
+    border-top: 1px solid rgb(246, 246, 246);
+    border-bottom: 1px solid rgb(246, 246, 246);
+    border-left: 1px solid rgb(246, 246, 246);
+    border-image: initial;
+    border-right: none;
+    background-color: rgb(255, 255, 255);
 }
-.#{$is}03 .inputBox .small{
-    width: 33%;
+.input-set04 input.button {
+        width: 18%;
+    background-image: url(#{$baseImgUrl}search-icon.png);
+    background-repeat: no-repeat;
+    background-color: rgb(246, 246, 246);
+    background-position: 54% 46%;
 }
-.#{$is}03 .inputBox .big{
-    width: 60%;
+/*input-set04 end*/
+
+/*input-set03 start*/
+.input-set03 .text{width: 63px;float: left;}
+.input-set03 .inputBox{margin-left: 63px;}
+.input-set03 .text,
+.input-set03 input{
+height: 27px;
+line-height: 27px;
+display: block;
+font-size: 14px;
 }
-.#{$is}03 input,
-.#{$is}03 textarea{
-    border: 1px solid #cfcfcf;
+.input-set03 input, 
+.input-set03 textarea{
+    border:1px solid #efefef;
     width: 100%;
+}
+.input-set03 textarea{min-height: 110px;}
+/*input-set03 end*/
+
+/*input-set02 start*/
+.input-set02{width:328px; height: 38px;}
+.input-set02 input { display: inline-block; float: left; height: 100%; font-size: 16px; font-weight: 500; }
+.input-set02 input.input:focus{outline: none;} 
+.input-set02 input.input {
+    box-sizing:border-box; width: 80%; padding-left: 2%;border:1px solid #f6f6f6;
+    border-right: none;
+    background-color: #fff;
+}
+.input-set02 input.button { width: 18%; 
+    background-image: url(#{$baseImgUrl}search-icon.jpg);background-repeat:  no-repeat;
+    background-color: #f6f6f6;
+}
+/*input-set02 end*/
+
+/*.input-set01  start*/
+.input-set01 {
+    position: relative;
+    display: table;
+    table-layout: fixed;
+    border-collapse: separate;
+}
+.input-set01+.input-set01{margin-top: 20px;}
+.input-set01 span{
+    font-size: 16px;
+    display: inline-block;
+    height: 47px;
+    width: 76px;
+    line-height: 47px;
+}
+.input-set01 .input{
+    width:385px;
+    height: 47px;
+    border: 1px solid #dbdbdb;
+    border-radius: 3px;
+}
+.input-set01 .input:focus{box-shadow: inset 0 1px 1px 2px rgba(0,0,0,.075), 0 0 8px 2px rgba(102, 175, 233, .6);outline: 0}
+/*.input-set01  end*/
+
+/*input-set start*/
+.input-set{}
+.input-set input{display: inline-block;float:left;height: 100%;font-size: 16px;font-weight: 500;}
+.input-set input.input{width:72%;padding-left:10px;box-sizing: border-box;}
+.input-set input.button{width:28%;}
+.input-set-l{height: 48px;}
+/*input-set end*/
+
+/*content1_form start*/
+.content1_form {}
+.content1_form input[type="submit"]{
+    margin-left: 77px;
+    margin-top: 28px;
+    font-size: 19px;
+    color:#643600;
+    width:231px;
+    height:44px;
     float: left;
-    padding: 0 5px;
+    padding:0px;
+    background:#ffc000;
 }
-.#{$is}03 textarea{
-    padding:{
-        top: 5px ;
-        bottom: 5px;
-    } 
-}     
-.#{$is}03 textarea {
-    min-height: 110px;
+
+/*content1_form end*/
+
+/*loginZone form start*/
+.loginZone{position: relative;}
+.loginZone .middleRow {
+    height: 200px;
+    background-color: #d6eafc;
 }
-/* input-set03 end */
+.loginZone .login-form{
+    text-align:left;
+    width: 37%;
+    margin: 0 auto; 
+    background: #deeffd;
+    border: 1px solid rgba(255,255,255,.3);
+    box-shadow: 0 0 40px black;
+    border-radius: 3px;
+    padding: 30px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;  
+}    
+.login-form .uname {
+    background: #fff url(#{$baseImgUrl}user.png) no-repeat 95% center;
+    color: #333;
+}
+.login-form .input-base {
+    display: block;
+    margin-top: 15px;
+}
+.login-form .pword {
+    background: #fff url(#{$baseImgUrl}locked.png) no-repeat 95% center;
+    color: #333;
+}
+.login-form .verify{display: inline-block;}
+.login-form .login{
+    display: block;width: 80%;margin:15px auto 0;
+    background-color: #1a7bb9;
+    border-color: #1a7bb9;
+    color: #FFF;
+    padding: 6px 12px;
+    border-radius: 5px;
+    
+}
+.tech-support{text-align: center;font-size: 12px; padding-top: 30px;}
+.loginZone{padding:50px 0;}
+
+/*loginZone form end*/
+
+/*.input-bg_icon start*/
+.input-bg_icon{
+    background: #fff url(#{$baseImgUrl}user.png) no-repeat 95% center;
+    color: #333;
+    padding-right: 40px;
+}
+/*.input-bg_icon end*/
+
+/*form-content01 start*/
+.form-content01 form{width:100%;}
+/*form-content01 end*/
+
+
+
+/*m-form-line start*/
+ .m-form-line{text-align: left;}
+ .m-form-line .input-set03{
+    float: left;
+    position: relative;
+    min-height: 1px;
+    padding: 12px 0;
+} 
+.m-form-line .m-btn{
+    width: 99px;
+    font-size: 13px;
+    font-weight: 700;
+    border:none;
+    color: #fff;
+    text-align: center;
+    padding:7px 0;
+    margin-right: 10px;
+    cursor: pointer;
+}
+/*m-form-line end*/
+
+/*input_box01 start*/
+.input_box01 .input_set_text{float: left;line-height: 48px;width: 30%;}
+/*input_box01 end*/
