--- a/sass/web/sideBar.scss
+++ b/sass/web/sideBar.scss
@@ -1,3 +1,5 @@
+@import "variable";
+
 /*r-sider01 start*/
 .r-sider01{width:328px;}
 .r-sider01 .floor{width:100%;display: block;padding:19px 0;}
@@ -21,20 +23,20 @@
 .r-sider01 .floor.bg-green .link .t01,
 .r-sider01 .floor.bg-green .link .t02{color:#fff;}
 
-.r-sider01 .floor.f00 .link{background:url(../img/sideBarbg03.png) no-repeat 50% 50%;line-height: 55px;}
-.r-sider01 .floor.f01 .link{background:url(../img/icon01.png) no-repeat 19% 50%;}
-.r-sider01 .floor.f02 .link{background:url(../img/icon02.png) no-repeat 19% 50%;}
-.r-sider01 .floor.f03 .link{background:url(../img/icon03.png) no-repeat 19% 50%;}
-.r-sider01 .floor.f04 .link{background:url(../img/icon04.png) no-repeat 19% 50%;}
-.r-sider01 .floor.f05 .link{background:url(../img/icon05.png) no-repeat 19% 50%;}
-.r-sider01 .floor.f06 .link{background:url(../img/icon06.png) no-repeat 19% 50%;}
+.r-sider01 .floor.f00 .link{background:url(#{$baseImgUrl}sideBarbg03.png) no-repeat 50% 50%;line-height: 55px;}
+.r-sider01 .floor.f01 .link{background:url(#{$baseImgUrl}icon01.png) no-repeat 19% 50%;}
+.r-sider01 .floor.f02 .link{background:url(#{$baseImgUrl}icon02.png) no-repeat 19% 50%;}
+.r-sider01 .floor.f03 .link{background:url(#{$baseImgUrl}icon03.png) no-repeat 19% 50%;}
+.r-sider01 .floor.f04 .link{background:url(#{$baseImgUrl}icon04.png) no-repeat 19% 50%;}
+.r-sider01 .floor.f05 .link{background:url(#{$baseImgUrl}icon05.png) no-repeat 19% 50%;}
+.r-sider01 .floor.f06 .link{background:url(#{$baseImgUrl}icon06.png) no-repeat 19% 50%;}
 
-.r-sider01 .floor.f01.on .link{background:url(../img/1.png) no-repeat 19% 50%;}
-.r-sider01 .floor.f02.on .link{background:url(../img/2.png) no-repeat 19% 50%;}
-.r-sider01 .floor.f03.on .link{background:url(../img/3.png) no-repeat 19% 50%;}
-.r-sider01 .floor.f04.on .link{background:url(../img/4.png) no-repeat 19% 50%;}
-.r-sider01 .floor.f05.on .link{background:url(../img/5.png) no-repeat 19% 50%;}
-.r-sider01 .floor.f06.on .link{background:url(../img/6.png) no-repeat 19% 50%;}
+.r-sider01 .floor.f01.on .link{background:url(#{$baseImgUrl}1.png) no-repeat 19% 50%;}
+.r-sider01 .floor.f02.on .link{background:url(#{$baseImgUrl}2.png) no-repeat 19% 50%;}
+.r-sider01 .floor.f03.on .link{background:url(#{$baseImgUrl}3.png) no-repeat 19% 50%;}
+.r-sider01 .floor.f04.on .link{background:url(#{$baseImgUrl}4.png) no-repeat 19% 50%;}
+.r-sider01 .floor.f05.on .link{background:url(#{$baseImgUrl}5.png) no-repeat 19% 50%;}
+.r-sider01 .floor.f06.on .link{background:url(#{$baseImgUrl}6.png) no-repeat 19% 50%;}
 
 .big-title{font-size: 25px;}
 
@@ -56,50 +58,60 @@
     display: block;
 }
 .sbcontent02 .abtn-wrapper.on{color:#fff;background-color: #6eb92b;}
-.sbcontent02 .a02-btn.btn01{background: url(../img/ibtn01.png) no-repeat 47% 35%;    }
-.sbcontent02 .a02-btn.btn02{background: url(../img/ibtn02.png) no-repeat 47% 35%;    }
-.sbcontent02 .a02-btn.btn03{background: url(../img/ibtn03.png) no-repeat 47% 35%;    }
-.sbcontent02 .a02-btn.btn04{background: url(../img/ibtn04.png) no-repeat 47% 35%;    }
-.sbcontent02 .a02-btn.btn05{background: url(../img/ibtn05.png) no-repeat 47% 35%;    }
-.sbcontent02 .a02-btn.btn06{background: url(../img/ibtn06.png) no-repeat 47% 35%;    }
-.sbcontent02 .abtn-wrapper.on .a02-btn.btn01{background: url(../img/ibtn001.png) no-repeat 47% 35%;    }
-.sbcontent02 .abtn-wrapper.on .a02-btn.btn02{background: url(../img/ibtn002.png) no-repeat 47% 35%;    }
-.sbcontent02 .abtn-wrapper.on .a02-btn.btn03{background: url(../img/ibtn003.png) no-repeat 47% 35%;    }
-.sbcontent02 .abtn-wrapper.on .a02-btn.btn04{background: url(../img/ibtn004.png) no-repeat 47% 35%;    }
-.sbcontent02 .abtn-wrapper.on .a02-btn.btn05{background: url(../img/ibtn005.png) no-repeat 47% 35%;    }
-.sbcontent02 .abtn-wrapper.on .a02-btn.btn06{background: url(../img/ibtn006.png) no-repeat 47% 35%;    }
+.sbcontent02 .a02-btn.btn01{background: url(#{$baseImgUrl}ibtn01.png) no-repeat 47% 35%;    }
+.sbcontent02 .a02-btn.btn02{background: url(#{$baseImgUrl}ibtn02.png) no-repeat 47% 35%;    }
+.sbcontent02 .a02-btn.btn03{background: url(#{$baseImgUrl}ibtn03.png) no-repeat 47% 35%;    }
+.sbcontent02 .a02-btn.btn04{background: url(#{$baseImgUrl}ibtn04.png) no-repeat 47% 35%;    }
+.sbcontent02 .a02-btn.btn05{background: url(#{$baseImgUrl}ibtn05.png) no-repeat 47% 35%;    }
+.sbcontent02 .a02-btn.btn06{background: url(#{$baseImgUrl}ibtn06.png) no-repeat 47% 35%;    }
+.sbcontent02 .abtn-wrapper.on .a02-btn.btn01{background: url(#{$baseImgUrl}ibtn001.png) no-repeat 47% 35%;    }
+.sbcontent02 .abtn-wrapper.on .a02-btn.btn02{background: url(#{$baseImgUrl}ibtn002.png) no-repeat 47% 35%;    }
+.sbcontent02 .abtn-wrapper.on .a02-btn.btn03{background: url(#{$baseImgUrl}ibtn003.png) no-repeat 47% 35%;    }
+.sbcontent02 .abtn-wrapper.on .a02-btn.btn04{background: url(#{$baseImgUrl}ibtn004.png) no-repeat 47% 35%;    }
+.sbcontent02 .abtn-wrapper.on .a02-btn.btn05{background: url(#{$baseImgUrl}ibtn005.png) no-repeat 47% 35%;    }
+.sbcontent02 .abtn-wrapper.on .a02-btn.btn06{background: url(#{$baseImgUrl}ibtn006.png) no-repeat 47% 35%;    }
 /*sbcontent02 end*/
 
+@mixin sideBar($position,$num){
+  $p:"";
+  @if $position == "left"{$p : "l";};
+  @if $position == "right"{$p : "r";};
+  .#{$p}-sider0#{$num}{
+      width: 231px;
+      ul{
+        li{
+          border-bottom: 1px solid rgb(255, 255, 255);
+          .floor{
+              padding: 18px 0px 18px 70px;
+              display: block;
+              text-align: left;
+              background-color: #fff;
+              color: #044444;
+              .t01{
+                  font-size: 18px;
+                  background: url(#{$baseImgUrl}ls03_plus.png) 82% 50% no-repeat;
+              }
+              &.f00{
+                .t02{
+                    text-align: left;
+                    color: rgb(183, 217, 159);
+                }
+              }
+              &.current{
+                background:#df0000;
+                .t01 {
+                    background: url(#{$baseImgUrl}ls03_minus.png) 82% 50% no-repeat;
+                    color:#fff;
+                }
+              }
+          }
+        }
+      }
+  } 
+}
 /*l-sider03 start*/
-.l-sider03 {
-    width: 231px;
-}
-.l-sider03 > ul > li {
-    border-bottom: 1px solid rgb(255, 255, 255);
-}
-.l-sider03 .floor {
-    padding: 18px 0px 18px 70px;
-    display: block;
-    text-align: left;
-    background-color: #fff;
-    color: #044444;
-}
+@include sideBar("left",3);
 
-.l-sider03 .floor .t01 {
-    font-size: 18px;
-}
-.l-sider03 .floor.f00 .t02 {
-    text-align: left;
-    color: rgb(183, 217, 159);
-}
-.l-sider03 .floor .t01 {
-    background: url("../img/plus.png") 82% 50% no-repeat;
-}
-.l-sider03 .floor.current{background:#df0000;}
-.l-sider03 .floor.current .t01 {
-    background: url("../img/minus.png") 82% 50% no-repeat;
-    color:#fff;
-}
 /*l-sider03 end*/
 
 /*l-sider02 start*/
@@ -118,8 +130,8 @@
    
 .l-sider02 .floor .t01{font-size: 15px;}
 
-.l-sider02 .floor:not(.f00) .t01{background:url(../img/sb-r-arrow.png) no-repeat 95% 50%;}
-.l-sider02 .floor:not(.f00).current .t01{background:url(../img/sb-downarrow.png) no-repeat 95% 50%;}
+.l-sider02 .floor:not(.f00) .t01{background:url(#{$baseImgUrl}sb-r-arrow.png) no-repeat 95% 50%;}
+.l-sider02 .floor:not(.f00).current .t01{background:url(#{$baseImgUrl}sb-downarrow.png) no-repeat 95% 50%;}
 .l-sider02>ul>li .list{display: none;}
 .l-sider02>ul>li .list .item{
   padding: 4px 0;
@@ -129,8 +141,8 @@
     background-color: #f6f6f6;
     color: #6eb92b;
 }
-.l-sider02>ul>li .list .item .t01{background:url(../img/g-r-arrow.png) no-repeat 95% 50%;}
-.l-sider02>ul>li .list .item.on .t01{color:#fff;background:url(../img/w-r-arrow.png) no-repeat 95% 50%;}
+.l-sider02>ul>li .list .item .t01{background:url(#{$baseImgUrl}g-r-arrow.png) no-repeat 95% 50%;}
+.l-sider02>ul>li .list .item.on .t01{color:#fff;background:url(#{$baseImgUrl}w-r-arrow.png) no-repeat 95% 50%;}
 .l-sider02>ul>li .list .item.on{background-color: #54a4d5}
 
 .l-sider02>ul>li{border-bottom: 1px solid #fff}
@@ -154,7 +166,7 @@
 .l-sider01 .floor.on{background-color: #54a4d5}
 .l-sider01 .floor.on .t01{color:#fff;}
 .l-sider01 .floor.on.current .t01{color:#fff;}
-.l-sider01 .floor:not(.f00).on .t01{background:url(../img/r-arrow.png) no-repeat 95% 50%;}
+.l-sider01 .floor:not(.f00).on .t01{background:url(#{$baseImgUrl}r-arrow.png) no-repeat 95% 50%;}
 .l-sider01 .floor.current .t01{color:#54a4d5;}
 .l-sider01 ul li:not(:first-child){border-bottom: 1px solid #dcdcdc}
 .l-sider01 .border{height: 4px;width: 100%}
