--- a/sass/web/barHeader.scss
+++ b/sass/web/barHeader.scss
@@ -547,6 +547,25 @@
 }
 /*logoRow end*/
 
+
+/*a-title-header02 start*/
+.a-title-header02 {
+    
+}
+.a-title-header02 .mainTitle {
+    font-size: 16px;
+    font-weight: 700;
+    text-align: center;
+    padding: 15px 0;
+    border-bottom: 1px solid #dbdbdb;
+}
+.a-title-header02 .articleInf {
+    text-align: center;
+    padding: 4px 0px;
+    color: #818181;
+}
+.a-title-header02 .articleInf span{margin-left: 15px;}
+/*a-title-header02 end*/
 /*a-title-header01 start*/
 .a-title-header01{border-bottom:1px dashed #c3c3c3;}
 .a-title-header01 .mainTitle{
