--- a/sass/web/barHeader.scss
+++ b/sass/web/barHeader.scss
@@ -397,6 +397,14 @@
 }
 /*wave-banner end*/
 
+
+.h-title01 .icon {
+    vertical-align: middle;
+    margin-right: 7px;
+    position: relative;
+    top: 2px;
+}
+
 /*header04 start*/
 .header04 {
     padding: 12px 0 12px 15px;
